force-app/main/default/objects/Contact/fields/Acclaim_Retro_Badge_Consent__c.field-meta.xml
<CustomField>
    <fullName>Acclaim_Retro_Badge_Consent__c</fullName>
    <description>Updated the label on this firld to better match the re-brand from Acclaim to Credly and the purpose of the field.  It is no longer for Retro badging, it is now for all badging.  MB 2/22/22</description>
    <inlineHelpText>This is the date that the participant gave us consent to issue all retro badges.</inlineHelpText>
    <label>Credly Consent Date</label>
    <type>Date</type>
</CustomField>