force-app/main/default/objects/Contact/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <formula>Account.Account_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account No</label>
    <type>Text</type>
</CustomField>