force-app/main/default/objects/Contact/fields/Advisory_Bio_Link__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Bio_Link__c</fullName>
    <label>Advisory Bio Link</label>
    <type>Url</type>
</CustomField>