force-app/main/default/objects/Contact/fields/Advisory_Bio_Link_French__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Bio_Link_French__c</fullName>
    <label>Advisory Bio Link French</label>
    <type>Url</type>
</CustomField>