force-app/main/default/objects/Contact/fields/Affiliated_with_Partner_Company__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_with_Partner_Company__c</fullName>
    <label>Affiliated with Partner Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>