force-app/main/default/objects/Contact/fields/All_Access_Portal__c.field-meta.xml
<CustomField>
    <fullName>All_Access_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Access Portal</label>
    <type>Checkbox</type>
</CustomField>