force-app/main/default/objects/Contact/fields/All_Access_Portal_Expires__c.field-meta.xml
<CustomField>
    <fullName>All_Access_Portal_Expires__c</fullName>
    <label>All Access Portal Expires</label>
    <type>Date</type>
</CustomField>