force-app/main/default/objects/Contact/fields/All_Access_Portal_type__c.field-meta.xml
<CustomField>
    <fullName>All_Access_Portal_type__c</fullName>
    <inlineHelpText>Direct - purchased invididually not part of the Company&apos;s license agreement
Tied to License - client purchased portal access as part of their license agreement</inlineHelpText>
    <label>All Access Portal type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Tied to License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>