force-app/main/default/objects/Contact/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <description>This field is mapped to Hubspot, user input on a form</description>
    <inlineHelpText>This is not actual revenue, it&apos;s being pulled from a form in Hubspot that the user is completing. Values in USD</inlineHelpText>
    <label>Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50M - 100M</fullName>
            </value>
            <value>
                <fullName>101M - 250M</fullName>
            </value>
            <value>
                <fullName>251M - 500M</fullName>
            </value>
            <value>
                <fullName>501M - 1B</fullName>
            </value>
            <value>
                <fullName>1B+</fullName>
            </value>
            <value>
                <fullName>&lt;50M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>