force-app/main/default/objects/Contact/fields/ANZ_18_Digit_ID_Contact__c.field-meta.xml
<CustomField>
    <fullName>ANZ_18_Digit_ID_Contact__c</fullName>
    <inlineHelpText>Stores the matching ANZ 18 Digit ID for their Contact</inlineHelpText>
    <label>ANZ 18 Digit ID Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>