force-app/main/default/objects/Contact/fields/Are_you_registering_multiple_people__c.field-meta.xml
<CustomField>
    <fullName>Are_you_registering_multiple_people__c</fullName>
    <label>Are you registering multiple people</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>