force-app/main/default/objects/Contact/fields/Attended_VILT_Certification__c.field-meta.xml
<CustomField>
    <fullName>Attended_VILT_Certification__c</fullName>
    <label>Attended VILT Certification</label>
    <length>10</length>
    <type>Text</type>
</CustomField>