force-app/main/default/objects/Contact/fields/BC_Synced__c.field-meta.xml
<CustomField>
    <fullName>BC_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC Synced</label>
    <type>Checkbox</type>
</CustomField>