force-app/main/default/objects/Contact/fields/Benefits_and_outcomes__c.field-meta.xml
<CustomField>
    <fullName>Benefits_and_outcomes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benefits and outcomes</label>
    <type>Checkbox</type>
</CustomField>