force-app/main/default/objects/Contact/fields/Billing_Above__c.field-meta.xml
<CustomField>
    <fullName>Billing_Above__c</fullName>
    <label>Billing Above</label>
    <length>255</length>
    <type>Text</type>
</CustomField>