force-app/main/default/objects/Contact/fields/Billing_Address_Same_as_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Same_as_Shipping_Address__c</fullName>
    <label>Billing Address Same as Shipping Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>