force-app/main/default/objects/Contact/fields/Billing_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Address_2__c</fullName>
    <label>Billing Street Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>