force-app/main/default/objects/Contact/fields/BillingName__c.field-meta.xml
<CustomField>
    <fullName>BillingName__c</fullName>
    <label>BillingName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>