force-app/main/default/objects/Contact/fields/BillingOrganisation__c.field-meta.xml
<CustomField>
    <fullName>BillingOrganisation__c</fullName>
    <label>BillingOrganisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>