force-app/main/default/objects/Contact/fields/BillingPostCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostCode__c</fullName>
    <label>Billing Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>