force-app/main/default/objects/Contact/fields/BillingSuburb__c.field-meta.xml
<CustomField>
    <fullName>BillingSuburb__c</fullName>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>