force-app/main/default/objects/Contact/fields/Brazil_Cancellation_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Brazil_Cancellation_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Eu aceito os termos de cancelamento e alteração da Prosci</inlineHelpText>
    <label>Brazil Cancellation Acceptance</label>
    <type>Checkbox</type>
</CustomField>