force-app/main/default/objects/Contact/fields/Browser_Language_Settings__c.field-meta.xml
<CustomField>
    <fullName>Browser_Language_Settings__c</fullName>
    <description>This field is mapped to Hubspot</description>
    <label>Browser Language Settings</label>
    <length>150</length>
    <type>Text</type>
</CustomField>