force-app/main/default/objects/Contact/fields/Certification_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certification_Certificate__c</fullName>
    <label>Certification Certificate #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>