force-app/main/default/objects/Contact/fields/Certification_for_Consultants__c.field-meta.xml
<CustomField>
    <fullName>Certification_for_Consultants__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will be automatically checked when a person attends a Certification for Consultants program.</description>
    <inlineHelpText>This box will be automatically checked when a person attends a Certification for Consultants program.</inlineHelpText>
    <label>Certification for Consultants</label>
    <type>Checkbox</type>
</CustomField>