force-app/main/default/objects/Contact/fields/Certification_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Certification_Instructor__c</fullName>
    <label>Certification Instructor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>