force-app/main/default/objects/Contact/fields/Certification_Interested_in__c.field-meta.xml
<CustomField>
    <fullName>Certification_Interested_in__c</fullName>
    <label>Certification Interested in</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>