force-app/main/default/objects/Contact/fields/Certification_Location__c.field-meta.xml
<CustomField>
    <fullName>Certification_Location__c</fullName>
    <label>Certification Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>