force-app/main/default/objects/Contact/fields/Certification_TM__c.field-meta.xml
<CustomField>
    <fullName>Certification_TM__c</fullName>
    <label>Certification TM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>