force-app/main/default/objects/Contact/fields/Certification_Venue__c.field-meta.xml
<CustomField>
    <fullName>Certification_Venue__c</fullName>
    <label>Certification Venue and Dates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>