force-app/main/default/objects/Contact/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <label>Certified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>