force-app/main/default/objects/Contact/fields/Change_community_member__c.field-meta.xml
<CustomField>
    <fullName>Change_community_member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Change Community means they want to receive emails about upcoming Webinars, etc.  Its automatically populated if they register for a program online or register to join the community.</inlineHelpText>
    <label>Change community member</label>
    <type>Checkbox</type>
</CustomField>