force-app/main/default/objects/Contact/fields/Change_Competency_Organization__c.field-meta.xml
<CustomField>
    <fullName>Change_Competency_Organization__c</fullName>
    <description>This field is mapped to hubspot</description>
    <label>Change Competency - Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>It&apos;s used ad hoc or we don&apos;t use it at all</fullName>
            </value>
            <value>
                <fullName>It&apos;s used on multiple projects but without a comprehensive approach in the organization</fullName>
            </value>
            <value>
                <fullName>We&apos;ve defined an approach to change using a specific methodology across all aspects of our organization</fullName>
            </value>
            <value>
                <fullName>Change management standards are a formal part of our business processes at all levels</fullName>
            </value>
            <value>
                <fullName>It&apos;s used on isolated projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>