force-app/main/default/objects/Contact/fields/Click_Thru_T_C_s_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Click_Thru_T_C_s_Agreement__c</fullName>
    <label>Click Thru T&amp;C&apos;s Agreement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>