force-app/main/default/objects/Contact/fields/Click_Thur_Company_name__c.field-meta.xml
<CustomField>
    <fullName>Click_Thur_Company_name__c</fullName>
    <label>Click Thur Company name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>