force-app/main/default/objects/Contact/fields/CM_and_PM_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>CM_and_PM_Sponsors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM and PM Sponsors</label>
    <type>Checkbox</type>
</CustomField>