force-app/main/default/objects/Contact/fields/CM_Issues__c.field-meta.xml
<CustomField>
    <fullName>CM_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Issues</label>
    <type>Checkbox</type>
</CustomField>