force-app/main/default/objects/Contact/fields/CM_plans__c.field-meta.xml
<CustomField>
    <fullName>CM_plans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM plans</label>
    <type>Checkbox</type>
</CustomField>