force-app/main/default/objects/Contact/fields/CM_resource__c.field-meta.xml
<CustomField>
    <fullName>CM_resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM resource</label>
    <type>Checkbox</type>
</CustomField>