force-app/main/default/objects/Contact/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <label>CNPJ</label>
    <length>150</length>
    <type>Text</type>
</CustomField>