force-app/main/default/objects/Contact/fields/Coach_the_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Coach_the_Trainer__c</fullName>
    <label>Coach the Trainer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>