force-app/main/default/objects/Contact/fields/Comments_from_Website__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Website__c</fullName>
    <label>Comments from Website</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>