force-app/main/default/objects/Contact/fields/Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_No__c</fullName>
    <displayFormat>P{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Contact No</label>
    <type>AutoNumber</type>
</CustomField>