force-app/main/default/objects/Contact/fields/Contact_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Primary_Phone__c</fullName>
    <label>Contact Primary Phone</label>
    <type>Phone</type>
</CustomField>