force-app/main/default/objects/Contact/fields/Contact_Priority__c.field-meta.xml
<CustomField>
    <fullName>Contact_Priority__c</fullName>
    <label>Contact Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>