force-app/main/default/objects/Contact/fields/Created_Date_Just_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Just_Date__c</fullName>
    <formula>DATEVALUE(  CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Just Date</label>
    <type>Date</type>
</CustomField>