force-app/main/default/objects/Contact/fields/Date_of_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Date_of_opt_in__c</fullName>
    <label>Date of opt in</label>
    <type>Date</type>
</CustomField>