force-app/main/default/objects/Contact/fields/Date_of_opt_out__c.field-meta.xml
<CustomField>
    <fullName>Date_of_opt_out__c</fullName>
    <label>Date of opt out</label>
    <type>Date</type>
</CustomField>