force-app/main/default/objects/Contact/fields/DAYLIGHT_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>DAYLIGHT_Company_Name__c</fullName>
    <inlineHelpText>Used to provide the name of the company that was linked in Daylight</inlineHelpText>
    <label>DAYLIGHT Company Name</label>
    <type>TextArea</type>
</CustomField>