force-app/main/default/objects/Contact/fields/Delivering_Project_Results_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Project_Results_Workshop__c</fullName>
    <label>Delivering Project Results Workshop</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>