force-app/main/default/objects/Contact/fields/Deployment_Leader_Recert_date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Leader_Recert_date__c</fullName>
    <label>Deployment Leader Recert date</label>
    <type>Date</type>
</CustomField>