force-app/main/default/objects/Contact/fields/ECM_Bootcamp__c.field-meta.xml
<CustomField>
    <fullName>ECM_Bootcamp__c</fullName>
    <label>ECM Bootcamp</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>