force-app/main/default/objects/Contact/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <description>Emergency contact for training participant</description>
    <label>Emergency Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>