force-app/main/default/objects/Contact/fields/Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship__c</fullName>
    <description>The relation of the emergency contact to the participant</description>
    <label>Emergency Contact Relationship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>