force-app/main/default/objects/Contact/fields/Enrolled_in_Advanced_Deployment_Track__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_Advanced_Deployment_Track__c</fullName>
    <label>Advanced Deployment Track</label>
    <length>25</length>
    <type>Text</type>
</CustomField>