force-app/main/default/objects/Contact/fields/Enrolled_in_Advanced_Instructor_Track__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_Advanced_Instructor_Track__c</fullName>
    <label>Advanced Instructor Track</label>
    <length>25</length>
    <type>Text</type>
</CustomField>