force-app/main/default/objects/Contact/fields/eToolkit_Owner__c.field-meta.xml
<CustomField>
    <fullName>eToolkit_Owner__c</fullName>
    <label>eToolkit Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>