force-app/main/default/objects/Contact/fields/europe_migration__c.field-meta.xml
<CustomField>
    <fullName>europe_migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Europe Migration</label>
    <type>Checkbox</type>
</CustomField>