force-app/main/default/objects/Contact/fields/Europe_Original_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Europe_Original_Conversion_Date__c</fullName>
    <label>Europe Original Conversion Date</label>
    <type>Date</type>
</CustomField>