force-app/main/default/objects/Contact/fields/Europe_Original_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Europe_Original_Lead_Source__c</fullName>
    <label>Europe Original Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>