force-app/main/default/objects/Contact/fields/Evangalist__c.field-meta.xml
<CustomField>
    <fullName>Evangalist__c</fullName>
    <label>Evangalist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>