force-app/main/default/objects/Contact/fields/Evangelist__c.field-meta.xml
<CustomField>
    <fullName>Evangelist__c</fullName>
    <label>Evangelist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>