force-app/main/default/objects/Contact/fields/Executive_Panelist__c.field-meta.xml
<CustomField>
    <fullName>Executive_Panelist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box indicates that this person has been invited to be on the Exec. Panel for 3 Day Certification programs to watch presentations.</inlineHelpText>
    <label>Executive Panelist</label>
    <type>Checkbox</type>
</CustomField>