force-app/main/default/objects/Contact/fields/Existing_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Existing_Portal_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Portal Access</label>
    <type>Checkbox</type>
</CustomField>