force-app/main/default/objects/Contact/fields/Experienced_Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Experienced_Practitioner__c</fullName>
    <label>Experienced Practitioner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>