force-app/main/default/objects/Contact/fields/Facilitators_Guide__c.field-meta.xml
<CustomField>
    <fullName>Facilitators_Guide__c</fullName>
    <inlineHelpText>What version/year of the facilitators guide does this client have? Enter only the 4 digit year</inlineHelpText>
    <label>Facilitators Guide</label>
    <length>4</length>
    <type>Text</type>
</CustomField>