force-app/main/default/objects/Contact/fields/FFX_Hist_Sch_Utilization__c.field-meta.xml
<CustomField>
    <fullName>FFX_Hist_Sch_Utilization__c</fullName>
    <formula>( pse__Hist_Sch_Utilization_Billable_Hours__c + pse__Hist_Sch_Utilization_Credited_Hours__c ) / ( pse__Historical_Utilization_Calendar_Hours__c - pse__Hist_Sch_Utilization_Excluded_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hist Sch Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>