force-app/main/default/objects/Contact/fields/FFX_Is_Resource_Current_User__c.field-meta.xml
<CustomField>
    <fullName>FFX_Is_Resource_Current_User__c</fullName>
    <formula>pse__Salesforce_User__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Resource Current User</label>
    <type>Checkbox</type>
</CustomField>