force-app/main/default/objects/Contact/fields/FFX_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>FFX_Resource_Name__c</fullName>
    <formula>(FirstName +&quot; &quot;+ LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>