force-app/main/default/objects/Contact/fields/French_Instructor_Bio__c.field-meta.xml
<CustomField>
    <fullName>French_Instructor_Bio__c</fullName>
    <label>French Instructor Bio</label>
    <type>Url</type>
</CustomField>