force-app/main/default/objects/Contact/fields/FSTR__Days_Until_Next_Birthday__c.field-meta.xml
<CustomField>
    <fullName>FSTR__Days_Until_Next_Birthday__c</fullName>
    <formula>FSTR__Next_Birthday__c-Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Next Birthday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>